--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 skylar_ha/dependent/skylar_beanstalkd.tar
 skylar_ha/dependent/skylar_pg.tar
 skylar_ha/dependent/skylar_redis.tar
+skylar_ha/dependent/skylar_main.tar
+
